# Cristal-Ollama-UDF

./: README.md
Ollama-SV/: pyproject.toml  requirements.txt
Ollama-SV/src/Bert_custom/: config.json
src/: Embeddings_Generate.ipynb  charge_embedding_llm.py  generate_embeddings.py  main.py  train_model.py
src/DataBusiness/: __init__.py  collections_repository.py  index.py  preprocess.py
src/LanguageModel/: __init__.py  embeddings.py  faiss_index.py
src/Tests/: test_cases.py  test_connection.py  test_dataframe.py  test_returning.py
